tests/NormalTests/paczka1/fuzzy1/74739667.err
Error in line 2: KJJ A991 87,1
Error in line 1: qZNDy A991 95,7
Error in line 7: KJJ A654 16,2
Error in line 8: qZNDy A721 87,9
Error in line 17: qZNDy A991 11,6
Error in line 19: qZNDy S420 27,7
Error in line 26: Wpr S420 62,1
Error in line 27: qZNDy A654 44,4
Error in line 30: qZNDy A721 57,7
Error in line 12: A721 S420 43,4
